flow 다이어그램 overwrite 된거 복구

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -354,6 +354,8 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
 
 ## 3.6. Authentication
 
+## 3.6.1. AuthenticationManager Basic
+
 - Authentication 인증 Flow Debug
 
     - UsernamePasswordAuthenticationFilter
@@ -391,13 +393,21 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
 
 - Authentication 인증 Flow 
 
-![AuthenticationManager](/docs/img/flow/flow_AuthenticationManager.png)
-
-## 3.6.1. AuthenticationManager Basic
+![AuthenticationManager](/docs/img/flow/flow_AuthenticationFlow.png)
 
 ## 3.6.2. AuthenticationManager Advance
 
+- AuthenticationManager
+    - 인증 필터로부터 인증처리를 지시 받는 인터페이스
+    - 인증 처리를 할 수 있는 Provider를 찾아서 인증 처리를 위임하는 클래스
 
+    - ParentProviderManager
+    
+    - ChildProviderManager
+    
+    - ProviderManager
+        - AnonymousAuthenticationProvider
+        - RememberMeAuthenticationProvider
 ## 3.7. AuthenticationProvider
 
 
