[4.3.4 ~ 5] 커스텀 로그인 페이지 생성, 로그아웃 및 인증에 따른 화면 보안 처리

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -20,7 +20,7 @@
             - 296 Line: FilterChainProxy filterChainProxy = new FilterChainProxy(securityFilterChains);
                 - **FilterChainProxy를 Bean생성** 및 등록
 
-- DelegateFilterProxy & FilterChainProxy 요청 Flow
+- DelegatingFilterProxy & FilterChainProxy 요청 Flow
     - DelegatingFilterProxy
         - 254 Line: public void doFilter(ServletRequest request, ServletResponse response, FilterChain filterChain)
             - 위임할 Filter를 찾는다. (springSecurityFilterChain)
@@ -408,6 +408,7 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
     - ProviderManager
         - AnonymousAuthenticationProvider
         - RememberMeAuthenticationProvider
+
 ## 3.7. AuthenticationProvider
 
 
