[4.3.7. CustomAuthenticationSuccessHandler, CustomAuthenticationFailureHandler] Handler 코드 작성

--- a/docs/lecture/4.authentication.md
+++ b/docs/lecture/4.authentication.md
@@ -193,12 +193,29 @@ protected void configure(AuthenticationManagerBuilder auth) throws Exception {
 }
 ```
 
+![]()
+
 ### 4.3.3. CustomAuthenticationProvider
+- AuthenticationProvider
+    - DB를 통한 사용자 정보의 유효성을 검증(password) 받은 UserDetails를 인증 토큰으로 생성하여 반환하는 역할을 하는 사용자 정의 클래스
 
-
+![]()
+     
 ### 4.3.4. Custom Login Form Page
+- 시큐리티에서 제공하는 로그인 페이지를 연결
+
 ### 4.3.5. 로그아웃 및 화면 보안 처리
+- 커스텀한 페이지에서 로그아웃 페이지에 대한 링크를 연결
+- 로그아웃 된 사용자의 세션 정보를 비우고 로그인 페이지로 redirect
+
+
 ### 4.3.6. WebAuthenticationDetails, AuthenticationDetailsSource
+- 인증 부가 기능
+    - WebAuthenticationDetails
+        - 사용자의 요청 정보 중 인증에 필요한 값 외에 추가적인 파라미터를 Authentication
+    - AuthenticationDetailsSource
+        - WebAuthenticationDetails 클래스를 생성하는 클래스
+
 ### 4.3.7. CustomAuthenticationSuccessHandler
 ### 4.3.8. CustomAuthenticationFailureHandler
 ### 4.3.9. Access Denied
