[4.3.9. Access Denied] 인가 거부 예외 페이지 작성 및 controller 작성

--- a/docs/lecture/4.authentication.md
+++ b/docs/lecture/4.authentication.md
@@ -217,8 +217,21 @@ protected void configure(AuthenticationManagerBuilder auth) throws Exception {
         - WebAuthenticationDetails 클래스를 생성하는 클래스
 
 ### 4.3.7. CustomAuthenticationSuccessHandler
+- 인증 성공 시 redirect 처리
+    - default Url 설정
+        - 사용자의 인증 성공 후 기본으로 설정되어 있는 url로 이동 (이전에 resource 요청이 없는 경우)
+    - RequestCache Url 설정
+        - 사용자의 이전 요청 정보를 세션에 저장하였다가 인증에 성공하는 경우 세션에 저장된 resource 요청 정보(url)를 기억하고 있다가 redirect
+
 ### 4.3.8. CustomAuthenticationFailureHandler
+- 인증 실패 시 처리 방법을 정의
+    - 비밀번호아 맞지 않는 예외 발생 시 
+    - 비밀번호 외에 사용자의 추가 파라미터 요청정보가 잘못된 경우
+        - 예외 발생시 나타낼 페이지 또는 resource를 정의하여 반환가능
+
 ### 4.3.9. Access Denied
+- 인가 거부 시 예외 발생과 인가 예외 페이지 이동 Handler 작성
+    - 인가 거부에 대한 응답 메시지를 페이지로 전달할 수 있도록 Controller 작성
 
 ### 4.3.10. CSRF, CsrfFilter
 ### 4.3.11. 인증 사용자 정보 구하기
