[4.4.3. AjaxAuthenticationProvider] 코드 작성 완료

--- a/docs/lecture/4.authentication.md
+++ b/docs/lecture/4.authentication.md
@@ -239,7 +239,61 @@ protected void configure(AuthenticationManagerBuilder auth) throws Exception {
 ## 4.4. Ajax 인증
 
 ### 4.4.1. 흐름 및 개요
+- Ajax 인증과 Form 인증의 전반적인 처리과정은 비슷하다.
+- 동일하게 Filter 기반으로 인증처리를 수행한다.
+- 필터가 사용하는 각각의 클래스도 역할이 차이가 있을 뿐 전반적인 Flow는 동일하다.
+- Form 인증은 동기적인 방식으로 처리되고 Ajax 인증은 비동기 방식으로 처리된다.
+
+- 인증 Flow
+    - AjaxAuthenticationFilter
+        - 비동기 인증처리 필터
+        - AjaxAuthenticationToken
+            - 사용자의 인증처리 관련 파라미터로 인증 토큰을 생성하기 위한 클래스
+        - AuthenticationManager
+            - AjaxAuthenticationFilter가 인증 토큰을 전달하여 인증 처리를 위임  
+        - AjaxAuthenticationProvider
+            - 실 인증 처리를 담당하는 클래스
+        - UserDetailsService
+            - DB 내에 저장된 사용자의 조회하는 역할
+        - AjaxAuthenticationSuccessHandler
+            - 인증 성공 시 처리
+        - AjaxAuthenticationFailureHandler
+            - 인증 실패 시 처리
+
+- 인가 Flow
+    - FilterSecurityInterceptor
+        - AuthenticationException
+            - 인증 예외
+        - AccessDeniedException
+            - 인가 예외
+
+    - ExceptionTranslationFilter
+        - AjaxAuthenticationEntryPoint
+            - 인증 실패 시 다시 로그인 페이지로 리다이렉트 처리
+        - AjaxAccessDeniedHandler
+            - 인가 실패 시 접근 불가 페이지 노출
+
 ### 4.4.2. AjaxAuthenticationFilter
+- Ajax 요청에 대한 인증 처리 가능한 Filter
+
+    1. AjaxFilter를 생성하는 방법
+        - AbstractAuthenticationProcessingFilter
+        - Form 인증 처리하는 클래스도 해당 추상 클래스를 상속받음
+    2. AjaxFilter의 작동 조건
+        - AntPathRequestMatcher("/api/login")로 요청정보와 매칭하고 요청 방식이 Ajax이면 필터 적용
+    3. AjaxFilter 처리 방식
+        - AjaxAuthenticationToken을 생성하여 AuthenticationManager에게 전달하여 인증처리
+    4. Ajax Filter를 FilterChain에 추가하는 방식
+        - http.addFilterBefore(AjaxAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class)
+
+- 코드 작성 요약
+    - SecurityConfig
+        - authenticationManagerBean 재정의를 통해 AuthenticationManager 등록
+        - ajaxLoginProcessingFilter Bean 등록
+            - Custom 한 AjaxLoginProcessingFilter에 AuthenticationManager 설정
+        - configure 설정으로 addFilterBefore())
+            - Custom한 ajaxLoginProcessingFilter를 UsernamePasswordAuthenticationFilter 전에 실행 될 수 있도록 설정
+
 ### 4.4.3. AjaxAuthenticationProvider
 ### 4.4.4. AjaxAuthenticationSuccessHandler
 ### 4.4.5. AjaxAuthenticationFailureHandler
