[3.1.1. DelegatingFilterProxy & FilterChainProxy] 플로우라고 할 것도 없는 내용 정리

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -10,11 +10,11 @@
         - DelegatingFilterProxy
             - 165 Line: public DelegatingFilterProxy(String targetBeanName, @Nullable WebApplicationContext wac) {
                 - springSecurityFilterChain: DelegatingFilerProxy 형태로 **Filter 생성**
-        - WebSecurityConfiguration
+        - WebSecurityConfiguration (스프링 영역)
             - 94 Line: @Bean(name = AbstractSecurityWebApplicationInitializer.DEFAULT_FILTER_NAME)
-                - **springSecurityFilterChain 명으로 Bean**을 등록
+                - **springSecurityFilterChain 명으로 Bean** 등록
             - 95 Line: public Filter springSecurityFilterChain() throws Exception {
-                - FilterChainProxy를 생성
+                - webSecurity가 FilterChainProxy을 springSecurityFilterChain이라는 이름으로 생성
         - WebSecurity
             - 279 Line: protected Filter performBuild() throws Exception {
             - 296 Line: FilterChainProxy filterChainProxy = new FilterChainProxy(securityFilterChains);
@@ -47,11 +47,66 @@
                         - 설정된 securtyFilterChain을 관리 및 호출하여 request에 대한 보안처리를 수행함
                         - 요청을 완로하고나서 Servlet으로 이동
 
+- DelegatingFilterProxy 정리
+    - 필터는 서블릿 2.3 이상 버전부터 사용할 수 있다.
+    - 서블릿은 사용자가 요청에 대한 자원에 접근 전 / 후에 대한 작업 처리가 가능하다.
+    - 대신 스프링 기술을 사용할 수 없음
+
+    - 스프링 시큐리티는 필터로 구성되어 처리를 하고 있다.
+    
+    - 스프링내에 필터 개발 목적
+        - 필터에서 스프링 기술을 사용하기 위한 필요성이 생김
+        - 스프링 빈 객체를 생성하고 필터라는 타입으로 다루어짐
+    
+    - 서블릿 기반으로 동작하는 스프링은 사용자의 요청을 서블릿 필터가 먼저 받게 된다.
+    - Was에 Tomcat이 올라가게되면 서블릿 컨테이너에서 돌아가고 있는 필터가 사용자의 요청을 받게 된다.
+    - 서블릿 필터에서 스프링에서 생성한 필터 타입의 스프링 빈으로 요청 정보를 넘겨 처리할 수 있게하는 클래스가 DelegatingFilterProxy 이다.
+    - DelegatingFilterProxy 는 서블릿 필터에 있는 필터이다.
+    - DelegatingFilterProxy는 사용자의 요청을 Spring에서 관리하는 Filter (Bean) 에게 작업처리를 위임하는 역할을 하고 있다.
+    - 결론
+        - 모든 요청은 서블릿 필터가 받고, 스프링 기술을 사용하기 위해서 스프링 시큐리티라는 필터를 통해 보안처리 및 스프링 기술을 사용할수 있게 되었다.
+
+    - springSecurityFilterChain이라는 이름으로 생성되고 이 Bean은 ApplicationContext가 관리
+    - springSecurityFilterChain으로 생성되는 필터 Bean은 FilterChainProxy이다.
+    
+- FilterChainProxy
+    - springSecurityFilterChain 내에 필터들을 관리하고 제어
+    - 필요에 따라 Filter의 개수가 늘어날 수 있음
+    - 사용자 정의에 따라 생성하여 필터체인에 추가 가능
+    - 필터의 순서가 중요
+    - 마지막 필터의 역할은 인증 및 인가 검증 처리
+    - 필터가 모두 정상 처리되어야 resource에 접근할 수 있다.
+    
+- 기본 필터 체인
+    0 = {WebAsyncManagerIntegrationFilter@7067} 
+    1 = {SecurityContextPersistenceFilter@8025} 
+    2 = {HeaderWriterFilter@8026} 
+    3 = {CsrfFilter@8027} 
+    4 = {LogoutFilter@8028} 
+    5 = {UsernamePasswordAuthenticationFilter@8029} 
+    6 = {DefaultLoginPageGeneratingFilter@8030} 
+    7 = {DefaultLogoutPageGeneratingFilter@8031} 
+    8 = {BasicAuthenticationFilter@8032} 
+    9 = {RequestCacheAwareFilter@8033} 
+    10 = {SecurityContextHolderAwareRequestFilter@8034} 
+    11 = {AnonymousAuthenticationFilter@8035} 
+    12 = {SessionManagementFilter@8036} 
+    13 = {ExceptionTranslationFilter@8037} 
+    14 = {FilterSecurityInterceptor@8014} 
+    
+- 내가 확인해 본 내용
+    1. 시큐리티 설정만 했을 때 적용되는 필터의 내용 ?
+    2. 어플리케이션 실행 시 DelegatingFilterProxy 및 FilterChainProxy 가 등록되는 플로우
+    3. 사용자 요청 시 처리되는 플로우
+    
+    
+![DelegatingFilterProxy](/docs/img/flow/flow_DelegatingFilterProxy.png "DelegatingFilterProxy")
+
 ## 3.2. 필터 초기화와 다중 보안 설정
 
 ### 3.2.1. 필터 초기화 및 다중 설정 클래스
 - 다중 설정이 필요한 이유 ?
-    - 요청 방식에 따라 다른 보안 방식이 필요하는 경우에 사용한다.
+    - 요청 방식 또는 요청 URL 에 따라 다른 보안 방식이 필요하는 경우에 사용한다.
 
 - 다중 설정 시 처리 방식
     - requestMatcher 에 따라 다른 Filter 사용
@@ -59,6 +114,8 @@
 - 다중 설정 시 설정 순서
     - requestMatcher에 따라 Filter Flow가 다르기 때문에 상세한 requestMapping 부터 선언하도록 한다.
     - 넓은 범위의 requestMapping부터 선언 시 세부적으로 설정해야 할 경로의 보안이 무시되는 이슈가 발생할 수 있음
+
+- 하나의 프로젝트에 securityFilterChains라는 리스트에 securityFilterChain이라는 값으로 존재
 
 ```
 @Order(0)
@@ -94,6 +151,46 @@ public class SecuritySubConfig extends WebSecurityConfigurerAdapter {
 }
 ```
 
+- WebSecurity
+    - 296 Line: FilterChainProxy filterChainProxy = new FilterChainProxy(securityFilterChains);
+        - securityFilterChains 라는 값 안에 두가지 filters 값이 들어있음
+        - FilterChainProxy 생성 시 생성자로 넘김
+        - antMatchers의 resource 접근 값에 따라 필터 프로세스가 달라짐
+            - chain: 1
+                0 = {WebAsyncManagerIntegrationFilter@7506} 
+                1 = {SecurityContextPersistenceFilter@7507} 
+                2 = {HeaderWriterFilter@7508} 
+                3 = {CsrfFilter@7509} 
+                4 = {LogoutFilter@7510} 
+                5 = {BasicAuthenticationFilter@7511} 
+                6 = {RequestCacheAwareFilter@7512} 
+                7 = {SecurityContextHolderAwareRequestFilter@7513} 
+                8 = {AnonymousAuthenticationFilter@7514} 
+                9 = {SessionManagementFilter@7515} 
+                10 = {ExceptionTranslationFilter@7516} 
+                11 = {FilterSecurityInterceptor@7517} 
+            - chain: 2
+                0 = {WebAsyncManagerIntegrationFilter@7522} 
+                1 = {SecurityContextPersistenceFilter@7523} 
+                2 = {HeaderWriterFilter@7524} 
+                3 = {CsrfFilter@7525} 
+                4 = {LogoutFilter@7526} 
+                5 = {UsernamePasswordAuthenticationFilter@7527} 
+                6 = {DefaultLoginPageGeneratingFilter@7528} 
+                7 = {DefaultLogoutPageGeneratingFilter@7529} 
+                8 = {RequestCacheAwareFilter@7530} 
+                9 = {SecurityContextHolderAwareRequestFilter@7531} 
+                10 = {AnonymousAuthenticationFilter@7532} 
+                11 = {SessionManagementFilter@7533} 
+                12 = {ExceptionTranslationFilter@7534} 
+                13 = {FilterSecurityInterceptor@7535} 
+        - FilterChainProxy
+            - 198 Line: List<Filter> filters = getFilters(fwRequest);
+                - 설정된 필터 리스트를 가져옴
+            - 226 Line: if (chain.matches(request)) {
+                - 요청정보(antMatcher)와 매핑이되는 해당 filterChain을 찾음
+            
+
 ## 3.3. Authentication
 
 - Authentication
@@ -107,7 +204,7 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
 
 - 구조
     - principal: 사용자 아이디 혹은 User 객체를 저장
-    - credential: 사용자 비밀번호
+    - credential: 사용자 비밀번호 (인증 정보)
     - authorities: 인증된 사용자의 권한 목록
     - details: 인증 부가 정보
     - Authenticated: 인증 여부
