--- a/docs/lecture/4.authentication.md
+++ b/docs/lecture/4.authentication.md
@@ -286,7 +286,7 @@ protected void configure(AuthenticationManagerBuilder auth) throws Exception {
     4. Ajax Filter를 FilterChain에 추가하는 방식
         - http.addFilterBefore(AjaxAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class)
 
-- 코드 작성 요약
+- Custom Filter 등록 코드 작성 요약
     - SecurityConfig
         - authenticationManagerBean 재정의를 통해 AuthenticationManager 등록
         - ajaxLoginProcessingFilter Bean 등록
@@ -295,8 +295,33 @@ protected void configure(AuthenticationManagerBuilder auth) throws Exception {
             - Custom한 ajaxLoginProcessingFilter를 UsernamePasswordAuthenticationFilter 전에 실행 될 수 있도록 설정
 
 ### 4.4.3. AjaxAuthenticationProvider
+- Ajax 인증 요청에 대해 실제 인증처리를 수행하는 클래스
+    - Filter에서 특정 인증 요청 resource에 접근하여 요청한 request 정보를 인증 토큰으로 생성하여 AuthenticationManager에게 전달
+    - AuthenticationManager는 인증 토큰 처리가 가능한 Provider를 찾아 Authentication 인증 객체를 전달
+
+    - 인증 처리 메서드 authenticate()
+        - 사용자 정의된 UserDetailsService 를 통해 DB에서 Username에 해당하는 Entity를 조회
+        - UserDetailsService
+            - 조회된 사용자의 정보를 User 클래스를 상속받은 사용자 정의 클래스 형태로 반환 (User 클래스는 UserDetails 인터페이스의 구현체)
+        - username, password의 유효성 검증 처리
+        - PasswordEncoder
+            - Password를 암호화 할 때 현재 프로젝트에서는 Bcrypt 방식을 사용
+        - 검증된 사용자의 요청값으로 AuthenticationToken을 생성
+        - AjaxAuthenticationToken
+            - UsernamePasswordAuthenticationToken 과 같은 방식으로 Token 생성하기 위해 그대로 생성
+            - 두 개의 생성자가 존재
+                1. 사용자의 request값으로 생성되어 provider 쪽으로 전달하기 위한 생성자
+                2. Provider를 통해 username, password 값의 유효성이 검증되어 UserDetails credentials, authorities 등을 저장할 생성자
+
+- Provider가 실행되기 위한 사전 정보
+    - Entity로 사용될 Account 클래스
+    - Account DB 조회 JpaRepository 인터페이스 구현 UserRepository
+    - UserDetailsService를 인터페이스를 구현한 CustomUserDetailsService
+
 ### 4.4.4. AjaxAuthenticationSuccessHandler
+
 ### 4.4.5. AjaxAuthenticationFailureHandler
+
 ### 4.4.6. AjaxLoginUrlAuthenticationEntryPoint
 ### 4.4.7. AjaxAccessDeniedHandler
 ### 4.4.8. DSL로 Config 설정하기
