[4.4.4 ~ 5 AjaxAuthenticationSuccessHandler, AjaxAuthenticationFailureHandler] 코드 추가, TODO: 해당 내용 flow, 코드 순서 정리 필요

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -49,7 +49,7 @@
 
 - DelegatingFilterProxy 정리
     - 필터는 서블릿 2.3 이상 버전부터 사용할 수 있다.
-    - 서블릿은 사용자가 요청에 대한 자원에 접근 전 / 후에 대한 작업 처리가 가능하다.
+    - 서블릿 필터란 사용자가 요청에 대한 자원에 접근 전 / 후에 대한 작업 처리가 가능하다.
     - 대신 스프링 기술을 사용할 수 없음
 
     - 스프링 시큐리티는 필터로 구성되어 처리를 하고 있다.
