[4.4.7. DSL로 Config 설정하기] Custom Filter Configurer 할 수 있는 DSL 코드 추가

--- a/docs/lecture/4.authentication.md
+++ b/docs/lecture/4.authentication.md
@@ -319,10 +319,35 @@ protected void configure(AuthenticationManagerBuilder auth) throws Exception {
     - UserDetailsService를 인터페이스를 구현한 CustomUserDetailsService
 
 ### 4.4.4. AjaxAuthenticationSuccessHandler
+- Ajax 방식의 인증 성공 후 처리
+    - 인증 성공 status 값, ContentType, 인증 성공한 객체 값 반환
 
 ### 4.4.5. AjaxAuthenticationFailureHandler
+- Ajax 방식의 인증 실패 후 처리
+    - 계정 여부 및 비밀번호 검증
+    - 계정 사용 여부
+    - 비밀번호 기한 만료 처리
 
-### 4.4.6. AjaxLoginUrlAuthenticationEntryPoint
-### 4.4.7. AjaxAccessDeniedHandler
-### 4.4.8. DSL로 Config 설정하기
-### 4.4.9. 로그인 Ajax 구현 & CSRF
+### 4.4.6. AjaxLoginUrlAuthenticationEntryPoint & AjaxAccessDeniedHandler
+- FilterSecurityInterceptor
+    - 인가 처리를 하는 필터 클래스
+        - 익명 사용자가 접근하는 경우
+        - 인가 예외 발생하는 경우
+            - AuthenticationEntryPoint
+        - 정상 인가 처리
+            - AccessDeniedException
+
+- 시나리오
+    - 인증되지 않은 사용자의 접근
+    - 인증이 되었으나 인가되지 않은 사용자의 접근
+    - 인증 & 인가가 정상처리된 사용자의 접근
+
+### 4.4.7. DSL로 Config 설정하기
+- AbstractHttpConfigurer
+    - 시큐리티 초기화 설정 클래스
+    - 필터, 핸들러, 메서드, 속성 등을 한 곳에 정의하여 처리할 수 있는 편리함 제공
+    - public void init(H http) throws Exception - 초기화
+    - public void configure(H http) - 설정
+
+
+### 4.4.8. 로그인 Ajax 구현 & CSRF
