[3.8.2. FilterSecurityInterceptor] 인가 내용 정리

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -508,14 +508,136 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
         - RememberMeAuthenticationProvider
 
 ## 3.7. AuthenticationProvider
-
-
+- AbstractAuthenticationProcessingFilter
+    - Line 212: authResult = attemptAuthentication(request, response);
+        - 구현된 필터를 통해 인증 처리
+        - UsernamePasswordAuthenticationFilter
+            - Line 69: public Authentication attemptAuthentication(HttpServletRequest request, HttpServletResponse response) throws AuthenticationException {
+                - 인증 처리 로직
+            - Line 95: return this.getAuthenticationManager().authenticate(authRequest);
+                - 인증 토큰 전달
+                - ProviderManager
+                    - Line 188: for (AuthenticationProvider provider : getProviders()) {
+                        - 프로젝트 내에 설정되어 있는 Provider 중 현재 form인증 처리를 할 수 있는 DaoAuthenticationProvider를 선택
+                    - Line 199 : result = provider.authenticate(authentication);
+                        - 현재 넘어온 인증 객체를 처리할 수 있는 DaoAuthenticationProvider에게 전달
+                        - AbstractUserDetailsAuthenticationProvider
+                            - Line 128: Assert.isInstanceOf(UsernamePasswordAuthenticationToken.class, authentication,() -> messages.getMessage("AbstractUserDetailsAuthenticationProvider.onlySupports", "Only UsernamePasswordAuthenticationToken is supported"));
+                                - Form인증를 할 수 있도록 검증 처리
+                            - Line 144: user = retrieveUser(username, (UsernamePasswordAuthenticationToken) authentication);
+                                - 유저 검색
+                                - DaoAuthenticationProvider
+                                    - Line 103: protected final UserDetails retrieveUser(String username, UsernamePasswordAuthenticationToken authentication) throws AuthenticationException {
+                                        - 사용자 조회
+                                    - Line 108: UserDetails loadedUser = this.getUserDetailsService().loadUserByUsername(username);
+                                        - DB에 사용자가 존재하는지 확인
+                                    - InMemoryUserDetailsManager
+                                        - Line 151: public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+                                            - 전달받은 username에 대한 유저 정보를 조회
+                            - Line 166: additionalAuthenticationChecks(user, (UsernamePasswordAuthenticationToken) authentication);
+                                - 패스워드 검증
+                                - DaoAuthenticationProvider
+                                    - Line 77: protected void additionalAuthenticationChecks(UserDetails userDetails, UsernamePasswordAuthenticationToken authentication) throws AuthenticationException {
+                            - Line 197: return createSuccessAuthentication(principalToReturn, authentication, user);
+                                - 인증 성공 시 인증 토큰을 만들어 인증된 객체를 AuthenticationManager에게 전달 
+                                - DaoAuthenticationProvider
+                                    - Line 128: protected Authentication createSuccessAuthentication(Object principal, Authentication authentication, UserDetails user) {
+                                        - 인증 객체 생성
+                    - 생성된 인증 객체를 인증 필터에게 전달
+            - Line 95: return this.getAuthenticationManager().authenticate(authRequest);
+                - 생성된 인증객체를 상위 클래스에서 성공 및 실패 처리할 수 있도록 전달
+    - Line 240: successfulAuthentication(request, response, chain, authResult);
+        - 인증 처리 성공시 후처리
+    - Line 307: protected void successfulAuthentication(HttpServletRequest request, HttpServletResponse response, FilterChain chain, Authentication authResult)
+        - SecurityContext에 Authentication(인증객체) 설정
+    - Line 326: successHandler.onAuthenticationSuccess(request, response, authResult);
+        - SuccessHandler에서 인증 성공시 자원 접근 가능 처리
+        
 ## 3.8. Authorization, FilterSecurityInterceptor
+- 인증 > 인가 > 자원접근
 
 ### 3.8.1. Authorization
+- 인가처리
+    - 인증된 사용자의 자원접근 허가여부 확인
+
+- 스프링 시큐리티가 지원하는 권한 계층
+    - 웹 계층(request)
+        - URL 요청에 따른 메뉴 혹은 화면 단위의 레벨 보안
+    - 서비스 계층(invoke)
+        - 화면 단위가 아닌 메서드 같은 기능 단위의 레벨 보안
+    - 도메인 계층(Access Control List, 접근 제어 목록) ( write )
+        - 객체 단위의 레벨 보안
 
 ### 3.8.2. FilterSecurityInterceptor
+- 인가 처리를 담당하는 Filter
+    - 마지막에 위치하는 필터로써 인증된 사용자에 대하여 특정 요청의 승인 / 거부 여부를 최종적으로 결정
+    - 인증 객체 없이 보호자원에 접근을 시도하는 경우 AuthenticationException 발생
+    - 인증 후 자원에 접근 가능한 권한이 존재하지 않은경우 AccessDeniedException 발생
+    - 권한 제어 방식 중 **Http 자원**의 보안을 처리하는 필터
+    - 권한 처리를 AccessDecisionManager 에게 맡김
+    
+- FilterSecurityInsterceptor
+    - 사용자의 요청 처리 순서
+        - 인증 객체의 존재여부 확인
+            - Null
+                - AuthenticationException
+                    - ExceptionTranslationFilter 
+            - Not Null
+                - SecurityMetadataSource(resource의 자원 접근 권한 확인)
+                    - 권한 정보 확인
+                        - No(NULL인 경우 권한 심사 하지 않음)
+                            - 자원 접근 허용
+                        - Yes
+                            - AccessDecisionManger
+                                - 심의 요청
+                                    - AccessDecisionVoter
+                                        - 승인
+                                            - 자원 접근 허용
+                                        - 거부
+                                            - AccessDeniedException
+                                                - ExceptionTranslationFilter 
 
+- code settings
+
+```
+http
+    /* /user resource는 USER 권한을 가진 사용자에 대해서 허용 */
+    .authorizeRequests().antMatchers("/user").hasRole("USER")
+    /* 그 외 요청에 대해서는 모든 사용자가 접근이 가능 */
+    .anyRequest().permitAll();
+```
+
+- AbstractSecurityInterceptor
+    - MethodSecurityInterceptor
+        - 메서드 보안 인가 처리
+        - AOP 기반으로 동작하는 Interceptor
+    - FilterSecurityInterceptor
+    - AspectJMethodSecurityInterceptor
+
+
+- debug
+- FilterChainProxy
+    - Line 334: nextFilter.doFilter(request, response, this);
+        - 필터 리스트에 ExceptionTranslationFilter가 설정되어 있는 것을 확인
+        - ExceptionTranslationFilter
+            - Line 118: chain.doFilter(request, response);
+            - FilterSecurityInterceptor
+                - Line 89: FilterInvocation fi = new FilterInvocation(request, response, chain);
+                    - 인가 처리를 담당하는 필터
+                    - 부모 클래스에 전달
+                - Line 123: InterceptorStatusToken token = super.beforeInvocation(fi);
+                    - 상위 클래스에 호출
+                    - AbstractSecurityInterceptor
+                        - Line 196: Collection<ConfigAttribute> attributes = this.obtainSecurityMetadataSource().getAttributes(object);
+                            - 유저의 속성정보를 호출
+                        - Line 199: if (attributes == null || attributes.isEmpty()) {
+                            - 유저의 자원정보를 확인
+                            - 유저 자원에 설정된 권한 정보를 확인하여 인가처리 할 수 있도록 함
+
+    - 인증되지 않은 사용자의 접근
+    - USER 권한을 가진 사용자의 접근
+    
+    
 
 ## 3.9. AccessDecisionManager, AccessDecisionVoter
 
