[3.10 스프링 시큐리티 필터 및 아키텍처 정리] 재정리 필요, 3.9.3 ~ 4 이해 필요

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -554,7 +554,7 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
         - SuccessHandler에서 인증 성공시 자원 접근 가능 처리
         
 ## 3.8. Authorization, FilterSecurityInterceptor
-- 인증 > 인가 > 자원접근
+- 인증확인 > 인가여부확인(자격조건심사) > 자원접근
 
 ### 3.8.1. Authorization
 - 인가처리
@@ -576,7 +576,26 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
     - 권한 제어 방식 중 **Http 자원**의 보안을 처리하는 필터
     - 권한 처리를 AccessDecisionManager 에게 맡김
     
-- FilterSecurityInsterceptor
+- Debug Point
+    - FilterChainProxy
+        - Line 334 : nextFilter.doFilter(request, response, this);
+            - 필터체인 리스트 확인 포인트
+            - 0 = {WebAsyncManagerIntegrationFilter@7562} 
+            - 1 = {SecurityContextPersistenceFilter@8944} 
+            - 2 = {HeaderWriterFilter@8945} 
+            - 3 = {CsrfFilter@8946} 
+            - 4 = {LogoutFilter@8947} 
+            - 5 = {UsernamePasswordAuthenticationFilter@8948} 
+            - 6 = {DefaultLoginPageGeneratingFilter@8949} 
+            - 7 = {DefaultLogoutPageGeneratingFilter@8950} 
+            - 8 = {RequestCacheAwareFilter@8951} 
+            - 9 = {SecurityContextHolderAwareRequestFilter@8952} 
+            - 10 = {AnonymousAuthenticationFilter@8953} 
+            - 11 = {SessionManagementFilter@8954} 
+            - 12 = {ExceptionTranslationFilter@8955} 
+            - 13 = {FilterSecurityInterceptor@8956}
+
+- FilterSecurityInterceptor
     - 사용자의 요청 처리 순서
         - 인증 객체의 존재여부 확인
             - Null
@@ -608,10 +627,10 @@ http
 ```
 
 - AbstractSecurityInterceptor
-    - MethodSecurityInterceptor
+    - MethodSecurityInterceptor (Interceptor)
         - 메서드 보안 인가 처리
         - AOP 기반으로 동작하는 Interceptor
-    - FilterSecurityInterceptor
+    - FilterSecurityInterceptor (Filter)
     - AspectJMethodSecurityInterceptor
 
 
@@ -628,25 +647,102 @@ http
                 - Line 123: InterceptorStatusToken token = super.beforeInvocation(fi);
                     - 상위 클래스에 호출
                     - AbstractSecurityInterceptor
-                        - Line 196: Collection<ConfigAttribute> attributes = this.obtainSecurityMetadataSource().getAttributes(object);
-                            - 유저의 속성정보를 호출
+                        - Line 196: **Collection<ConfigAttribute> attributes = this.obtainSecurityMetadataSource().getAttributes(object);**
+                            - 유저자원("/users")에 설정된 자원접근 권한정보("USER")를 조회
                         - Line 199: if (attributes == null || attributes.isEmpty()) {
                             - 유저의 자원정보를 확인
                             - 유저 자원에 설정된 권한 정보를 확인하여 인가처리 할 수 있도록 함
+                        - Line 222: **if (SecurityContextHolder.getContext().getAuthentication() == null) {**
+                            - **인증 객체가 NULL인지 아닌지 확인 (현재는 인증되지 않은 사용자로 접근: anonymousToken을 갖고 있는 사용자)**
+                            - 인증Filter를 비정상적으로 통화하여 접근한 사용자의 경우 인증 토큰이 존재 X ?
+                        - Line 233: this.accessDecisionManager.decide(authenticated, object, attributes);
+                            - 인가 처리를 AccessDecisionManager에게 위임
+                            - AffirmativeBased
+                                - Line 58: public void decide(Authentication authentication, Object object, Collection<ConfigAttribute> configAttributes) throws AccessDeniedException {
+                                    - 실제 인가처리를 작업
+                                - Line 63: int result = voter.vote(authentication, object, configAttributes);
+                                    - 구현 클래스에 권한 인가 위임
+                                    - WebExpressionVoter
+                                        - Line 36: int result = voter.vote(authentication, object, configAttributes);
+                                            - 현 접근자원에 대한 접근 권한을 갖고 있는지 판단
+                - Line 126: fi.getChain().doFilter(fi.getRequest(), fi.getResponse());
+                    - 요청 자원에 대한 접근
+                                - Line 83: if (deny > 0) {
+                                - Line 84: throw new AccessDeniedException(messages.getMessage("AbstractAccessDecisionManager.accessDenied", "Access is denied"));
+                                    - 접근 권한이 없는 경우 예외 처리
+                        - Line 236: publishEvent(new AuthorizationFailureEvent(object, attributes, authenticated, accessDeniedException));
+                            - 발생한 예외를 ExceptionTranslationFilter가 받아서 처리
+                            - ExceptionTranslationFilter
+                                - Line 166: private void handleSpringSecurityException(HttpServletRequest request, HttpServletResponse response, FilterChain chain, RuntimeException exception)
+                                    - AuthenticationException 또는 AccessDeniedException 예외를 처리
+                                - Line 179: else if (exception instanceof AccessDeniedException) {
+                                    - 인가 예외로 인한 예외 처리 로직 
+                                - Line 184: sendStartAuthentication(...);
+                                - Line 204: protected void sendStartAuthentication(HttpServletRequest request, HttpServletResponse response, FilterChain chain, AuthenticationException reason) throws ServletException, IOException {
+                                    - SecurityContext에 인증 객체 null 설정
+                                - Line 212: authenticationEntryPoint.commence(request, response, reason);
+                                    -  LoginUrlAuthenticationEntryPoint
+                                        - Line 133: public void commence(HttpServletRequest request, HttpServletResponse response, AuthenticationException authException) throws IOException, ServletException {
+                                        - Line 169: redirectStrategy.sendRedirect(request, response, redirectUrl);
+                                            - 로그인 페이지로 접근하여 인증 하도록 유도
+                                
 
     - 인증되지 않은 사용자의 접근
     - USER 권한을 가진 사용자의 접근
     
     
-
 ## 3.9. AccessDecisionManager, AccessDecisionVoter
+- FilterSecurityInterceptor
+    - 인가 처리
+    
+    - AccessDecisionManager
+        - decide
+            - 권한 심사 요청
+            - Authentication
+            - FilterInvocation
+            - ConfigAttributes
 
+        - AccessDecisionVoter
+            - 권한 심사 정보 반환
+            - ACCESS_GRANTED
+            - ACCESS_DENIED
+            - ACCESS_ABSTAIN
+
+        - ACCESS_DENIED
+            - ExceptionTranslationFilter
+                - 예외 처리
+  
 ### 3.9.1. AccessDecisionManager Basic
+- 인증정보, 요청정보, 권한정보를 이용하여 사용자의 자원접근을 허용할 것인가를 최종 결정하는 주체
+- 여러 개의 Voter들을 가질 수 있으며 Voter들로부터 접근허용, 거부, 보류에 해당하는 각각의 값을 리턴받아 판단 및 결정
+- 최종 접근 거부 시 예외 발생
+
+- 접근 결정의 세 가지 유형
+    - AffirmativeBased
+        - 여러 개의 voter 클래스 중 하나라도 접근 허가로 결론을 내면 접근 허가로 판단
+    - ConsensusBased
+        - 다수표(승인 및 거부)에 의해 최종 결정을 판단
+        - 동수인 경우 기본은 접근허가이나 allowIfEqualGrantedDeniedDecision을 false로 설정하는 경우 접근거부로 결정
+    - UnanimousBased
+        - 모든 voter가 만장일치로 접근을 승인해야하며 그렇지 않은 경우 접근을 거부
 
 ### 3.9.2. AccessDecisionVoter Basic
+- 판단을 심사하는 것
+- Voter가 권한 부여 과정에서 판단하는 자료
+    - Authentication - 인증 정보(User)
+    - FilterInvocation - 요청 정보(antMatcher("/user"))
+    - ConfigAttributes - 권한 정보(hasRole("USER"))
+- 결정 방식
+    - ACCESS GRANTED: 권한 허용(1)
+    - ACCESS DENIED: 접근 거부(-1)
+    - ACCESS ABSTAIN: 접근 보류(0)
+        - voter가 해당 타입의 요청에 대해 결정을 내릴 수 없는 경우
 
 ### 3.9.3. AccessDecisionManager Advance
 
 ### 3.9.4. AccessDecisionVoter Advance
 
 ## 3.10 스프링 시큐리티 필터 및 아키텍처 정리
+![1. 익명 사용자의 인증 성공 후 루트페이지 이동](/docs/img/flow/flow_SecurityCore_인증성공후_페이지이동.png)
+![2. 동일 계정으로 접근 시](/docs/img/flow/flow_SecurityCore_동일계정접근시.png)
+![3. 기존 사용자의 접근 시](/docs/img/flow/flow_SecurityCore_기존사용자접근시.png)
