[3.10 스프링 시큐리티 필터 및 아키텍처 정리] 3.9.3 ~ 4 이해 필요, GitBook추가

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -1,6 +1,12 @@
 # 3. 시큐리티 주요 아키텍처 이해 
 
 ## 3.1. Proxy
+웹 보안
+- 웹 계층의 스프링 보안은 서블릿 기반으로 한다.
+
+- 클라이언트는 응용 프로그램에 요청을 보낸다.
+- 컨테이너는 요청 URI의 경로를 기반으로 어떤 필터와 어떤 서블릿이 응용 프로그램에 적용되는지 결정한다.
+- 서블릿은 한번의 요청을 필터체인을 순서대로 싷행하여 처리한다.
 
 ### 3.1.1. DelegatingFilterProxy & FilterChainProxy
 - DelegatingFilterProxy & FilterChainProxy 생성 및 등록 Flow
@@ -22,7 +28,7 @@
 
 - DelegatingFilterProxy & FilterChainProxy 요청 Flow
     - DelegatingFilterProxy
-        - 254 Line: public void doFilter(ServletRequest request, ServletResponse response, FilterChain filterChain)
+        - 250 Line: public void doFilter(ServletRequest request, ServletResponse response, FilterChain filterChain)
             - 위임할 Filter를 찾는다. (springSecurityFilterChain)
         - 264 Line: delegateToUse = initDelegate(wac);
             - 338 Line: Filter delegate = wac.getBean(targetBeanName, Filter.class);
