[5. 인가(Authorization) 프로세스 구현 - DB 연동] 인가 프로세스 시작 전 프로젝트 세팅

--- a/docs/lecture/5.authorization.md
+++ b/docs/lecture/5.authorization.md
@@ -5,10 +5,13 @@
 ## 5.2. URL 방식
 
 ### 5.2.1. 주요 아키텍처 이해
+- http.antMatcher("/user").access("hasRole('USER')");
+    - USER 권한을 가진 사용자만이 /user 자원에 접근이 가능하다.
 
 ### 5.2.2. 관리자 시스템 구성
 
 ### 5.2.3. FilterInvocationSecurityMetadataSource
+
 
 ### 5.2.4. Map 기반 DB 연동
 
